Javascript fix for div resizing on safari mobile
hooray Jørgen!

--- a/app/styles/_boxes.scss
+++ b/app/styles/_boxes.scss
@@ -135,7 +135,7 @@ li {
     }
 }
 
-.box__text:hover,.box__text:focus,.box__text:active {
+.box__text:hover,.box__text:focus,.box__text:active,.box__text--focus {
    @include breakpoint(mobileonly){
       height: 150%;
       width: 100%;
@@ -163,7 +163,7 @@ li {
    }
 }
 
-.box__slideshow:hover,.box__slideshow:focus,.box__slideshow:active {
+.box__slideshow:hover,.box__slideshow:focus,.box__slideshow:active,.box__slideshow--focus {
    @include breakpoint(mobileonly){
       height: 150%;
       width: 100%;
